--- a/TestBlazorSetup/Components/Pages/Home.razor
+++ b/TestBlazorSetup/Components/Pages/Home.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, you cruel, cruel world!</h1>
 
-Welcome to your new app.
+<h3>Hello from my updated Blazor app!</h3>
+
+Welcome to your exciting new app!
