--- a/TestBlazorSetup/Components/Pages/Counter.razor
+++ b/TestBlazorSetup/Components/Pages/Counter.razor
@@ -7,7 +7,9 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Click me now!</button>
+
+<button class="btn btn-primary" @onclick="NotifyUser">Notify me of something!</button>
 
 @code {
     private int currentCount = 0;
@@ -15,5 +17,11 @@
     private void IncrementCount()
     {
         currentCount++;
+    }
+
+    private void NotifyUser()
+    {
+        // This is a placeholder for a notification logic
+        Console.WriteLine("User has been notified!");
     }
 }
